# DSA

./: .gitignore  CMakeLists.txt  README.md
include/: dsa.h  linalg.h  sorting.h
src/: dsa.c
tests/: test_dsa.c  test_linalg.c  test_sorting.c
